Added a dot to the images path

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
   <body>
     <div class="container">
       <header>
-        <img src="/images/logo.svg" alt="26andfour logo" class="logo" />
+        <img src="./images/logo.svg" alt="26andfour logo" class="logo" />
         <nav>
           <a href="#" class="hide-desktop">
             <img
-              src="/images/ham.svg"
+              src="./images/ham.svg"
               alt="toggle menu"
               class="menu"
               id="menu"
@@ -27,7 +27,7 @@
 
           <ul class="show-desktop hide-mobile" id="nav">
             <li id="exit" class="exit-btn hide-desktop">
-              <img src="/images/exit.svg" alt="exit menu" />
+              <img src="./images/exit.svg" alt="exit menu" />
             </li>
             <li><a href="#"> something </a></li>
             <li><a href="#"> services </a></li>
@@ -38,7 +38,7 @@
       </header>
       <section>
         <img
-          src="/images/server.svg"
+          src="./images/server.svg"
           alt="server illustration"
           class="server"
         />
@@ -46,7 +46,7 @@
         <p class="subhead">Go serverless and pay only for what you use</p>
 
         <img
-          src="/images/scroll.svg"
+          src="./images/scroll.svg"
           alt="scroll down"
           class="scroll hide-mobile show-desktop"
         />
@@ -56,21 +56,21 @@
       <div class="container"></div>
       <ul>
         <li>
-          <img src="/images/icon-1.svg" alt="Calendar icon" />
+          <img src="./images/icon-1.svg" alt="Calendar icon" />
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
         </li>
         <li>
-          <img src="/images/icon-2.svg" alt="Calendar1 icon" />
+          <img src="./images/icon-2.svg" alt="Calendar1 icon" />
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
         </li>
         <li>
-          <img src="/images/icon-3.svg" alt="Calendar2 icon" />
+          <img src="./images/icon-3.svg" alt="Calendar2 icon" />
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -84,7 +84,7 @@
         <ul>
           <li>
             <figure>
-              <img src="/images/user1.png" alt="User testimonial picture" />
+              <img src="./images/user1.png" alt="User testimonial picture" />
               <blockquote>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -94,7 +94,7 @@
           </li>
           <li>
             <figure>
-              <img src="/images/user2.png" alt="User testimonial picture" />
+              <img src="./images/user2.png" alt="User testimonial picture" />
               <blockquote>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                 eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -114,7 +114,7 @@
     <footer>
       <div class="footer-container">
         <div class="container">
-          <a href="#"> <img src="/images/logo-white.svg" alt="logo" /></a>
+          <a href="#"> <img src="./images/logo-white.svg" alt="logo" /></a>
 
           <p class="address">
             MP, 90210 <br />
