--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li id="exit" class="exit-btn hide-desktop">
               <img src="./images/exit.svg" alt="exit menu" />
             </li>
-            <li><a href="#"> something </a></li>
+            <li><a href="#"> home </a></li>
             <li><a href="#"> services </a></li>
             <li><a href="#"> about </a></li>
             <li><a href="#"> contact </a></li>
